# SmartTTS

./: README.md  config.yml  pyproject.toml
src/agno_smartread/: agno_smartread_function.old1.py  agno_smartread_function.py  register.py
src/agno_smartread.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/agno_smartread/configs/: config.yml
